{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 22,
  "lineage": "f74c6d6b-08d9-5ceb-b7f4-3ec3c0049163",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:internet-gateway/igw-0a340e8125ef02806",
            "id": "igw-0a340e8125ef02806",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_seoul_igw"
            },
            "tags_all": {
              "Name": "pjt_seoul_igw"
            },
            "vpc_id": "vpc-0167939193047178d"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:route-table/rtb-0078e571d5ebe3b6e",
            "id": "rtb-0078e571d5ebe3b6e",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pjt_seoul_pri_rt"
            },
            "tags_all": {
              "Name": "pjt_seoul_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0167939193047178d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:route-table/rtb-0d1a76fb03d03ae5c",
            "id": "rtb-0d1a76fb03d03ae5c",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a340e8125ef02806",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pjt_seoul_pub_rt"
            },
            "tags_all": {
              "Name": "pjt_seoul_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0167939193047178d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pri_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sn3_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0445771f2eaa046b0",
            "route_table_id": "rtb-0078e571d5ebe3b6e",
            "subnet_id": "subnet-080e5bedbee1b5176"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pri_sn4_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057093e04a88c50da",
            "route_table_id": "rtb-0078e571d5ebe3b6e",
            "subnet_id": "subnet-0884e6bd1876fef63"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn1_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf20a5d29c2e266",
            "route_table_id": "rtb-0d1a76fb03d03ae5c",
            "subnet_id": "subnet-055ace2e8e4b68bd1"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ada3589b207c64e8",
            "route_table_id": "rtb-0d1a76fb03d03ae5c",
            "subnet_id": "subnet-087979b454904eeae"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-055ace2e8e4b68bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055ace2e8e4b68bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_seoul_10.1.1.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_seoul_10.1.1.0/24_sn"
            },
            "vpc_id": "vpc-0167939193047178d"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-087979b454904eeae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087979b454904eeae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_seoul_10.1.2.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_seoul_10.1.2.0/24_sn"
            },
            "vpc_id": "vpc-0167939193047178d"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-080e5bedbee1b5176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080e5bedbee1b5176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_seoul_10.1.3.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_seoul_10.1.3.0/24_sn"
            },
            "vpc_id": "vpc-0167939193047178d"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-0884e6bd1876fef63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884e6bd1876fef63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_seoul_10.1.4.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_seoul_10.1.4.0/24_sn"
            },
            "vpc_id": "vpc-0167939193047178d"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:vpc/vpc-0167939193047178d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0890341c96157a953",
            "default_route_table_id": "rtb-088692f523fd3253a",
            "default_security_group_id": "sg-030160994915945eb",
            "dhcp_options_id": "dopt-0fa6c85811b7a2cab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0167939193047178d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088692f523fd3253a",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_seoul_vpc"
            },
            "tags_all": {
              "Name": "pjt_seoul_vpc"
            }
          }
        }
      ]
    }
  ]
}